Fix issue where the captured photo section is visible even if there is no picure to be shown

--- a/src/App.css
+++ b/src/App.css
@@ -137,10 +137,18 @@
 
 .camera-canvas {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  width: 100%;
+  padding: 0.2rem;
+
   border-radius: 8px;
 }
 
-#gallery-canvas {
+.captured-photo {
   width: 100%;
-  border-radius: 6px;
+}
+
+.hidden {
+  display:none;
+  position: absolute;
+  visibility: hidden;
 }
